<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS my GPS</string>
    <string name="app_version">Version 3.4.7 (36)</string>

    <string name="add_item">Add item</string>
    <string name="edit_item">Edit item</string>
    <string name="info">About</string>
    <string name="settings">Settings</string>

    <string name="enable_service_switch">Enable service</string>
    <string name="service_running">Service is running</string>
    <string name="service_channel">Service channel</string>

    <string name="item_already_added_warning">This number is already in the list!</string>

    <string name="sender_label">Sender\'s number:</string>
    <string name="pick_contact_button">Choose a contact…</string>
    <string name="message_label">Sender\'s message prefix:</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="field_empty_label">This field can\'t be empty</string>

    <string name="version_history_label"><a href="https://github.com/anevero/sms_my_gps/releases">Version history</a></string>
    <string name="source_code_label"><a href="https://github.com/anevero/sms_my_gps">Source code</a> (GPL 2.0 license)</string>
    <string name="based_on_label">Based on <a href="https://github.com/warren-bank/Android-SMS-Automatic-Reply-GPS">Warren Bank\'s project</a></string>
    <string name="faq_label">Frequently asked questions</string>
    <string name="how_to_label">How to use this app?</string>
    <string name="how_to_faq_label">Just add a number and a message, to which the app should reply. When your phone gets this message from this number, the app will send the location as a reply to it.</string>
    <string name="background_working_label">Why does this app not work in the background?</string>
    <string name="background_working_faq_label">Due to Android restrictions, we can\'t guarantee that app will be able to always work in background. Ensure that this app is allowed to run in background (Settings - Apps). Disable battery saver mode.</string>
    <string name="last_known_location_not_sent_label">Why does this app not send the last known location?</string>
    <string name="last_known_location_not_sent_faq_label">The app can send last known location only if the system can provide it. If Android can\'t provide the last known location (for example, because you had GPS disabled for a long time), the app won\'t send it.</string>
    <string name="location_permission_label">How does this app use location permission?</string>
    <string name="location_permission_faq_label">The app uses it to get the location after receiving an appropriate incoming SMS.</string>
    <string name="sms_permission_label">How does this app use SMS permission?</string>
    <string name="sms_permission_faq_label">The app reads all the incoming SMS to check if it needs to send location as a reply. It doesn\'t store or process your SMS messages in any other way.</string>
    <string name="contacts_permission_label">How does this app use contacts permission?</string>
    <string name="contacts_permission_faq_label">This permission is not necessary. You can provide it to use contact picker when creating a new item. If you don\'t provide it, you still will be able to enter the number by yourselves.</string>
    <string name="privacy_policy_label">Privacy policy</string>
    <string name="privacy_policy_faq_label">The app doesn\'t collect any data. Google Location services are used for location requests. Their use is regulated by <a href="https://policies.google.com/technologies/location-data">Google Privacy Policy</a>.</string>
    <string name="back_button">Back</string>

    <string name="location_providers_label">Location providers</string>
    <string name="location_accuracy_label">Location accuracy</string>
    <string name="other_settings_label">Other settings</string>

    <string name="fused_switch">Google Location Services</string>
    <string name="fused_switch_summary">Uses different sensors (including GPS) to get quite accurate location in several tens of seconds.</string>
    <string name="fused_last_known_switch">Last known location (Google Location Services)</string>
    <string name="fused_last_known_switch_summary">Last known location can be sent almost immediately (if available) but can be quite outdated.</string>
    <string name="system_gps_switch">GPS</string>
    <string name="system_gps_switch_summary">Sometimes GPS module can provide a more accurate location than Google Location Services (but it can take up to several minutes).</string>
    <string name="system_gps_last_known_switch">Last known location (GPS)</string>
    <string name="system_gps_last_known_switch_summary">Gets the last known location using only the GPS sensor.</string>
    <string name="system_network_switch">Network</string>
    <string name="system_network_switch_summary">Uses cellular and nearest WiFi networks to determine the location. Can be less accurate, than GPS, but works faster.</string>
    <string name="system_network_last_known_switch">Last known location (network)</string>
    <string name="system_network_last_known_switch_summary">Gets the last known location using only the network info.</string>
    <string name="location_accuracy_dropdown">Necessary accuracy (meters)</string>
    <string name="attempts_number_dropdown">Maximum location requests number</string>
    <string name="run_on_startup_switch">Run on system startup</string>
    <string name="run_on_startup_switch_summary">If the service is enabled, it will start automatically after system restart.</string>
    <string name="app_theme_dropdown">App theme</string>
    <string name="app_theme_system_option">System</string>
    <string name="app_theme_light_option">Light</string>
    <string name="app_theme_dark_option">Dark</string>

</resources>
