<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/AppTheme"
    tools:context=".activity.InfoActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name_label"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_version_label"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version" />

        <TextView
            android:id="@+id/releases_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_history_label" />

        <TextView
            android:id="@+id/source_code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_code_label" />

        <TextView
            android:id="@+id/based_on_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/based_on_label" />

        <TextView
            android:id="@+id/faq_label"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:text="@string/faq_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/how_to_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/how_to_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/how_to_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_faq_label" />

        <TextView
            android:id="@+id/background_working_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/background_working_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/background_working_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_working_faq_label" />

        <TextView
            android:id="@+id/last_known_location_not_sent_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/last_known_location_not_sent_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/last_known_location_not_sent_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_known_location_not_sent_faq_label" />

        <TextView
            android:id="@+id/location_permission_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/location_permission_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location_permission_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_permission_faq_label" />

        <TextView
            android:id="@+id/sms_permission_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/sms_permission_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sms_permission_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_permission_faq_label" />

        <TextView
            android:id="@+id/contacts_permission_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/contacts_permission_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contacts_permission_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts_permission_faq_label" />

        <TextView
            android:id="@+id/privacy_policy_label"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:text="@string/privacy_policy_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/privacy_policy_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_faq_label" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
