<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name_label"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_version_label"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version" />

        <TextView
            android:id="@+id/source_code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_code_label" />

        <TextView
            android:id="@+id/based_on_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/based_on_label" />

        <TextView
            android:id="@+id/faq_label"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/faq_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/background_working_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/background_working_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/background_working_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_working_faq_label" />

        <TextView
            android:id="@+id/last_known_location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_known_location_not_sent_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/last_known_location_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_known_location_not_sent_faq_label" />

        <TextView
            android:id="@+id/privacy_policy_label"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/privacy_policy_label"
            android:textColor="@color/header_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/privacy_policy_faq_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_faq_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/back_button"
            android:textAlignment="center" />

    </LinearLayout>

</ScrollView>
